--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "file-loader": "^3.0.1",
     "less-loader": "^4.1.0",
     "node-sass": "^4.11.0",
+    "npm": "^6.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "path": "^0.12.7",
     "postcss-loader": "^3.0.0",
+    "prop-types": "^15.7.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
@@ -41,6 +43,8 @@
   "dependencies": {
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
+    "react-js-pagination": "^3.0.2",
+    "react-paginate": "^6.3.0",
     "react-router-dom": "^5.0.0"
   }
 }
